
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 DEC 20a
  * in cycle/share/cycle_share.c
    - in update_linked_nodes(), increased the buffer size 
      from (zone.ie-zone.is)*(zone.je-zone.js)if3DL(*(zone.ke-zone.ks)
      to (zone.ie-zone.is+1)*(zone.je-zone.js+1)if3DL(*(zone.ke-zone.ks+1))
  * in cycle/share/tsemf_share.c
    - in update_dUstar_emfield_SOR_forward() and update_dUstar_emfield_SOR_backward()
      increased the buffer size 
      from (zone.ie-zone.is)*(zone.je-zone.js)if3DL(*(zone.ke-zone.ks)
      to (zone.ie-zone.is+1)*(zone.je-zone.js+1)if3DL(*(zone.ke-zone.ks+1))
  * in src/main.c
    - at the beginning of main(), increased the stack size to 16 MB
    

2023 DEC 15a
  * in model/chem/_NH3_Plasma_10s
    - made improvements to the Rodriguez model
    

2023 DEC 08a
  * in  model/chem/_NH3_Plasma_10s/rodriguez2023.c
    - made improvements
    

2023 DEC 07a
  * in model/chem/_NH3_Plasma_10s
    - made changes to rodriguez2023.c and its documentation

  
2023 DEC 06b
  * in model/chem/_NH3_Plasma_10s/omprakas2023.c
    - made minor updates
  * in model/chem/_NH3_Plasma_10s/doc/
    - added documentation of the rodriguez2023.c solver
    

2023 DEC 06a
  * in cycle/share/res_share.c
    - in find_Fstar_interface_FDS_muscl_without_CDF() added call to 
      find_conditioned_Lambda_absolute_restrained_from_jacvars
  * in cycle/share/ts_share.c
    - in void find_Aabs_restrained_from_jacvars(), now calls find_Lambda_restrained_from_jacvars()
      and find_conditioned_Lambda_absolute_restrained_from_jacvars()
  * in model/chem/_NH3_Plasma_10s
    - improved rodriguez2023.c (reaction 17) 
    - improved the documentation of omprakas2023.c
  * in model/fluid/_Favre-Reynolds_Tv/fluid.c, model/fluid/_Favre-Reynolds_plasma/fluid.c